--- a/.gitea/workflows/push.yaml
+++ b/.gitea/workflows/push.yaml
@@ -15,5 +15,5 @@ jobs:
       - run: echo "The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
-          ls ${{ gitea.workspace }}
+          tools/file-length
       - run: echo "This job's status is ${{ gitea.status }}."
