ci: asan, msam, ubsan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,31 @@ cmake_minimum_required(VERSION 3.16)
 project(lemondb)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-std=c++20 -Wall -Wextra -Werror -pedantic -Wno-unused-result -Wconversion -Wno-unused-parameter -O2")
-set(CMAKE_CXX_CLANG_TIDY "clang-tidy-18;-checks=-*,clang-analyzer-*,performance-*,misc-*,-performance-avoid-endl,-misc-include-cleaner;-fix")
-set(CMAKE_CXX_CPPCHECK "cppcheck;--quiet")
+set(CMAKE_CXX_COMPILER /usr/lib/llvm-18/bin/clang++)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_FLAGS "-std=c++20 -Wall -Wextra -Werror -pedantic -Wno-unused-result -Wconversion -Wno-unused-parameter")
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h")
 
-file(GLOB_RECURSE SOURCE_FILES "src/*.cpp" "src/*.h")
-add_executable(lemondb src/main.cpp ${SOURCE_FILES})
+# lemondb
+add_executable(lemondb ${SOURCES})
 target_link_libraries(lemondb pthread)
+target_compile_options(lemondb PRIVATE -O2)
+
+# lemondb-asan
+add_executable(lemondb-asan ${SOURCES})
+target_link_libraries(lemondb-asan pthread)
+target_compile_options(lemondb-asan PRIVATE -DDEBUG -g -O2 -fsanitize=address -fno-omit-frame-pointer -fno-sanitize-recover=all)
+target_link_options(lemondb-asan PRIVATE -fsanitize=address)
+
+# lemondb-msan
+add_executable(lemondb-msan ${SOURCES})
+target_link_libraries(lemondb-msan pthread)
+target_compile_options(lemondb-msan PRIVATE -DDEBUG -g -O2 -fsanitize=memory -fno-omit-frame-pointer -fsanitize-memory-track-origins -fPIE)
+target_link_options(lemondb-msan PRIVATE -fsanitize=memory -pie)
+
+# lemondb-ubsan
+add_executable(lemondb-ubsan ${SOURCES})
+target_link_libraries(lemondb-ubsan pthread)
+target_compile_options(lemondb-ubsan PRIVATE -DDEBUG -g -O2 -fsanitize=undefined,integer,bounds,float-divide-by-zero,implicit-conversion,float-cast-overflow,nullability -fno-omit-frame-pointer -fno-sanitize-recover=all)
+target_link_options(lemondb-ubsan PRIVATE -fsanitize=undefined)
