--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,11 @@ target_compile_options(lemondb-asan PRIVATE -DDEBUG -g -O2 -fsanitize=address -f
 target_link_options(lemondb-asan PRIVATE -fsanitize=address)
 
 # lemondb-msan
-set(MSAN_LIBCXX_DIR "/usr/local/lib/libc++_msan-18")
+set(MSAN_LIBCXX_DIR "/usr/local/lib/libc++_msan-18/include/c++/v1")
 if(EXISTS "${MSAN_LIBCXX_DIR}")
 	add_executable(lemondb-msan ${SOURCES})
 	target_link_libraries(lemondb-msan pthread c++ c++abi)
-	target_compile_options(lemondb-msan PRIVATE -DDEBUG -g -O2 -fsanitize=memory -fno-omit-frame-pointer -fsanitize-memory-track-origins -fPIE -nostdinc++ -isystem ${MSAN_LIBCXX_INCLUDE_DIR})
+	target_compile_options(lemondb-msan PRIVATE -DDEBUG -g -O2 -fsanitize=memory -fno-omit-frame-pointer -fsanitize-memory-track-origins -fPIE -nostdinc++ -isystem ${MSAN_LIBCXX_DIR})
 	target_link_options(lemondb-msan PRIVATE -fsanitize=memory -pie -Wl,-rpath,/usr/local/lib/libc++_msan-18/lib)
 	target_link_directories(lemondb-msan PRIVATE /usr/local/lib/libc++_msan-18/lib)
 else()
